fix color contrast on page elements

--- a/html-template/css/intermine.css
+++ b/html-template/css/intermine.css
@@ -1,6 +1,6 @@
 /* core */
 body { font-family:'Helvetica Neue',Arial,Helvetica,sans-serif !important; font-size:17px; margin:0; margin-top:2px;
-	color:#666; }
+	color:#575757; }
 .wrap { margin:0 auto; width:1072px; display:block; }
 
 /* generic */
@@ -8,6 +8,7 @@ a,
 :link,
 *:visited { border:0; color:#007DCC; text-decoration:underline; -moz-transition:background 0.3s;
 	-webkit-transition:background 0.3s; -o-transition:background 0.3s; transition:background 0.3s; }
+a.missing:link, a.missing:visited, a.missing, span.missing, a.forbidden, span.forbidden { color:#575757; }
 h1, h2, h3, h4 { color:#83A501; font-weight:normal; letter-spacing:-0.5px; margin-left:0 !important;
 	display:block; border-bottom:1px solid #DDD; text-shadow:1px 1px 1px #F7F7F7;
 	font-family:'Helvetica Neue',Arial,Helvetica,sans-serif !important; }
@@ -117,11 +118,12 @@ div.wiki-toc a:hover { color:#000; }
 #altlinks ul li.first { padding-left:0; }
 
 /* footer */
-#footer { padding:20px 0; }
+#footer { padding:20px 0; color:#575757; }
 #footer a:hover { color:#000; }
 #footer p { border:0 !important; line-height:13px; }
 #footer footer.vcard { margin-left:30px; color:#8F8F8F; font-size:12px; display:inline-block; min-height:30px;
 	background:url('../img/cam-logo.gif') no-repeat top right; padding-right:160px; }
 #footer p.left { margin-left:0; }
 #footer p.right a { vertical-align:middle; display:inline-block; }
-#footer p.right a:hover { background:#FFF; } 
+#footer p.right a:hover { background:#FFF; }
+#footer :link, #footer :visited { color:#575757; }
